<resources>

    <string name="app_name">APPEP</string>

    <string name="addTitle">Añadir Nuevo Pozo</string>
        <string name="updateTitle">Añadir Nuevo Evento</string>
        <string name="addComponent">Seleccionar Componentes</string>
        <string name="addedComponents">Componentes Seleccionados</string>
        <string name="internalInfo">Informacion Interna</string>
        <string name="anularInfo">Informacion Anular</string>
        <string name="finalInfo">Informacion Final del Pozo</string>
    <string name="viewTitle">Informacion del Pozo</string>
        <string name="viewEvnt">Informacion de Ultimo Evento</string>
    <string name="mainTitle">Mis Pozos</string>

    <string name="temp_date">dd/mm/aaaa</string>
    <string name="temp_real">0.0</string>
    <string name="temp_double">(0.00)</string>
    <string name="temp_lrmipsm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="temp_lrmipsm2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>


    <string name="todo_name">Nombre</string>
    <string name="todo_desc">Campo</string>
    <string name="todo_tppz">Tipo de Pozo</string>
        <string name="todo_tpvr">Vertical</string>
        <string name="todo_tphz">Horizontal</string>
        <string name="todo_kom">Kick Off Point Profundidad Medida (ft)</string>
        <string name="todo_kov">Kick Off Point Profundidad Vertical (ft)</string>
        <string name="todo_ebm">End of Build Profundidad Medida (ft)</string>
        <string name="todo_ebv">End of Build Profundidad Vertical (ft)</string>
    <string name="todo_date">Fecha Creacion</string>
    <string name="envt_date">Fecha del Evento</string>
    <string name="todo_actv">Abierto</string>
    <string name="todo_idts">Numero</string>

    <string name="comp_dp1">Drill Pipe 1</string>
    <string name="comp_dp2">Drill Pipe 2</string>
    <string name="comp_dp3">Drill Pipe 3</string>
    <string name="comp_dc">Drill Collar</string>
    <string name="comp_dc2">Drill Collar 2</string>
    <string name="comp_hwdp">HeavyWeight Drill Pipe</string>
    <string name="comp_broca">Broca</string>
    <string name="comp_estab">Estabilizador</string>
    <string name="comp_hrrAd">Herramientas Adicionales</string>
    <string name="comp_rev1">Revestimiento 1</string>
    <string name="comp_rev2">Revestimiento 2</string>
    <string name="comp_rev3">Revestimiento 3</string>

    <string name="fnl_pol">Peso Original del Lodo (ppg)</string>
    <string name="fnl_pvv">Profundidad Vertical Verdadera (ft)</string>
    <string name="fnl_ptm">Profundidad Total Medida (ft)</string>
    <string name="fnl_prb">Presion Reducida de Bomba (psi)</string>
    <string name="fnl_dsb">Desplazamiento de Bomba (bbl/str)</string>
    <string name="fnl_pctp">Presion Cierre Tuberia de Perforacion (psi)</string>
        <string name="fnl_pctp_small">Pr. Cierre Tuberia (psi)</string>
    <string name="fnl_pcrv">Presion Cierre Revestimiento (psi)</string>
        <string name="fnl_pcrv_small">Pr. Cierre Revestimiento (psi)</string>
    <string name="fnl_gnsp">Ganancia en Superficie (bbl)</string>
    <string name="fnl_ppcr">Programa de Presion de Circulacion</string>
    <string name="fnl_estr">Estroques</string>
    <string name="fnl_prcr">Presion Circulacion (psi)</string>
    <string name="fnl_psld">Peso del Lodo para Matar (ppg)</string>
        <string name="fnl_esko">Estroques Hasta KOP (stk)</string>
        <string name="fnl_eseb">Estroques Hasta EOB (stk)</string>
        <string name="fnl_esko_small">Estroques KOP</string>
        <string name="fnl_eseb_small">Estroques EOB</string>
    <string name="fnl_esfa">Estroques Fondo Arriba (stk)</string>
    <string name="fnl_esbr">Estroques Hasta Broca (stk)</string>
    <string name="fnl_crmp">Circulacion para Matar el Pozo (bbl)</string>
    <string name="fnl_prfr">Presion de Fractura (psi)</string>
    <string name="fnl_prpr">Presion de Poro (psi)</string>
    <string name="fnl_prad">Advertencia: Presion Hidrostatica por fuera de rango</string>

    <string name="num_frm">#.#####</string>

    <string name="comps_ref">Ver Referencias</string>
    <string name="comps_lon">Longitud (ft)</string>
    <string name="comps_lon_sarta">Longitud de Sarta (ft)</string>
    <string name="comps_lon_anulr">Longitud Anular (ft)</string>
    <string name="comps_od">Diametro Externo - OD (in)</string>
        <string name="comps_od_small">D.Externo(in)</string>
    <string name="comps_id">Diametro Interno - ID (in)</string>
        <string name="comps_id_small">D.Interno(in)</string>
        <string name="comps_pso_small">Peso(lbs)</string>
    <string name="comps_cap">Capacidad (bbl/ft)</string>
    <string name="comps_vol">Volumen (bbl)</string>
    <string name="comps_vol_intrn">Volumen Interno (bbl)</string>
    <string name="comps_vol_anulr">Volumen Anular (bbl)</string>
    <string name="comps_vol_kop">Volumen Hasta KOP (bbl)</string>
    <string name="comps_vol_eob">Volumen Hasta EOB (bbl)</string>

    <string name="todo_add_button">Añadir Pozo</string>
    <string name="todo_add_event">Añadir Nuevo Evento</string>
    <string name="todo_del_button">Eliminar Pozo</string>
    <string name="todo_upd_button">Actualizar Pozo</string>
    <string name="todo_cmp_button">Finalizar Pozo</string>
    <string name="todo_hst_button">Historial Completo de Eventos</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="out">Finalizar</string>
    <string name="rzc">Realizar Calculos Anulares</string>
    <string name="nxt">Siguiente</string>
    <string name="bfr">Anterior</string>
    <string name="bck">Volver</string>

    <string name="splashimg">splashImg</string>
    <string name="an1">Anular1</string>
    <string name="an2">Anular2</string>
    <string name="In1">Interno1</string>

</resources>