<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddPozoFragment4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitleAdd4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/finalInfo"
                android:textAlignment="center"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:textAlignment="center"
                android:textDirection="inherit" />

            <TextView
                android:id="@+id/textViewPsoOrgLdo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_pol" />

            <TextView
                android:id="@+id/textViewPrfVrtVrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_pvv" />

            <TextView
                android:id="@+id/textViewPrfTtlMdi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_ptm" />

            <TextView
                android:id="@+id/textViewPrsRedBmb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_prb" />

            <TextView
                android:id="@+id/textViewDspBmb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_dsb" />

            <TextView
                android:id="@+id/textViewPrsCrrTbo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_pctp" />

            <TextView
                android:id="@+id/textViewPrsCrrRev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_pcrv" />

            <TextView
                android:id="@+id/textViewGncSup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fnl_gnsp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>