<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddPozoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitleAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/addTitle"
                android:textAlignment="center"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:textAlignment="center"
                android:textDirection="inherit" />

            <TextView
                android:id="@+id/textViewNombreAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_name" />

            <EditText
                android:id="@+id/editTextToDoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:ems="10"
                android:hint="@string/todo_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewDescAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_desc" />

            <EditText
                android:id="@+id/editTextToDoDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/todo_desc"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textTitleAdd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/addComponent"
                android:textAlignment="center"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:textAlignment="center"
                android:textDirection="inherit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxDP1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/comp_dp1"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxDP2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/comp_dp2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxHWDP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/comp_hwdp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxDC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/comp_dc"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxBroca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="true"
                    android:text="@string/comp_broca"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxEstabilizador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/comp_estab"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxRev1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/comp_rev1"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxRev2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/comp_rev2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:textAlignment="center"
                android:textDirection="inherit" />

            <Button
                android:id="@+id/todoAddButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_add_button" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>